# core

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: parity.yml  python.yml  rust.yml
chronosynd-py/: README.md  pyproject.toml
chronosynd-py/chronosynd_py/: __init__.py  core.py
chronosynd-py/chronosynd_py/baseline/: __init__.py  _shared.py  alternatives.py  base.py  naive.py  sediment.py
chronosynd-py/chronosynd_py/evaluation/: __init__.py  harness.py  metrics.py  plots.py  workloads.py
chronosynd-py/chronosynd_py/evaluation/attacks/: __init__.py  burst.py  patience.py  pre_seed.py  targeted.py
chronosynd-py/chronosynd_py/evaluation/experiments/: __init__.py  exp01_clean_baseline_fpr.py  exp02_naive_under_poisoning.py  exp03_robust_under_poisoning.py  exp04_budget_sweep.py  exp05_fp_cost.py  exp06_multimodal_benign.py  exp07_alternatives_ablation.py  exp08_burst_alternatives_ablation.py  exp09_targeted_white_box.py
chronosynd-py/chronosynd_py/evaluation/figures/: __init__.py  fig01_clean_baseline_fpr.py  fig02_naive_under_poisoning.py  fig03_robust_under_poisoning.py  fig04_budget_sweep.py  fig05_fp_cost.py  fig06_multimodal_benign.py  fig07_alternatives_ablation.py  fig08_burst_alternatives_ablation.py  fig09_targeted_white_box.py
chronosynd-py/chronosynd_py/features/: __init__.py  bindings.py  syscall_ngram.py  vocab.py
chronosynd-py/chronosynd_py/parity/: __init__.py  emit.py  emit_features.py
chronosynd-py/chronosynd_py/scoring/: __init__.py  offline.py
chronosynd-py/tests/baseline/: test_alternatives.py  test_naive.py  test_score_batch.py  test_sediment.py
chronosynd-py/tests/evaluation/: test_harness.py  test_metrics.py  test_plots.py  test_workloads.py
chronosynd-py/tests/evaluation/attacks/: test_burst.py  test_pre_seed.py  test_targeted.py
chronosynd-py/tests/features/: test_syscall_ngram.py
chronosynd-rs/: Cargo.toml
chronosynd-rs/.cargo/: audit.toml
chronosynd-rs/crates/baseline/: Cargo.toml
chronosynd-rs/crates/baseline/src/: error.rs  independent_gaussian.rs  lib.rs  naive.rs  sediment.rs
chronosynd-rs/crates/baseline/tests/: baseline_tests.rs  parity_tests.rs  parity_vectors.json
chronosynd-rs/crates/bpf/: Cargo.toml  build.rs
chronosynd-rs/crates/bpf/bpf/: README.md  event.h  syscall_probe.bpf.c
chronosynd-rs/crates/bpf/examples/: show_obj.rs
chronosynd-rs/crates/bpf/src/: lib.rs
chronosynd-rs/crates/bpf/tests/: embed_tests.rs
chronosynd-rs/crates/cli/: Cargo.toml
chronosynd-rs/crates/cli/src/: lib.rs  main.rs
chronosynd-rs/crates/cli/tests/: cli_tests.rs
chronosynd-rs/crates/collector/: Cargo.toml
chronosynd-rs/crates/collector/src/: daemon.rs  event.rs  lib.rs  main.rs  replay.rs  source.rs  wire.rs
chronosynd-rs/crates/collector/src/sources/: bpf.rs  mod.rs  synthetic.rs
chronosynd-rs/crates/collector/tests/: bpf_parse_tests.rs  daemon_tests.rs  record_replay_tests.rs  synthetic_source_tests.rs
chronosynd-rs/crates/features/: Cargo.toml
chronosynd-rs/crates/features/src/: error.rs  lib.rs  syscall_ngram.rs  types.rs  vocab.rs
chronosynd-rs/crates/features/tests/: ngram_tests.rs  parity_tests.rs  parity_vectors.json
chronosynd-rs/crates/scoring/: Cargo.toml
chronosynd-rs/crates/scoring/src/: error.rs  lib.rs  scorer.rs  sync.rs  types.rs
chronosynd-rs/crates/scoring/tests/: scoring_tests.rs
chronosynd-rs/crates/storage/: Cargo.toml
chronosynd-rs/crates/storage/src/: audit.rs  error.rs  lib.rs  schema.rs  store.rs  types.rs
chronosynd-rs/crates/storage/tests/: store_tests.rs
docs/: THREAT_MODEL.md  architecture.md  evaluation_protocol.md
evaluation/: README.md
evaluation/attack_payloads/: README.md  etc_recon.sh  spawn_storm.sh
evaluation/results/: exp01_clean_baseline_fpr.csv  exp02_naive_under_poisoning.csv  exp03_robust_under_poisoning.csv  exp04_budget_sweep.csv  exp05_fp_cost.csv  exp06_multimodal_benign.csv  exp07_alternatives_ablation.csv  exp08_burst_alternatives_ablation.csv
evaluation/workloads/: README.md
paper/: .latexmkrc  Makefile  outline.md  paper.tex  references.bib
paper/sections/: background.tex  conclusion.tex  discussion.tex  evaluation.tex  intro.tex  limitations.tex  sediment.tex  system.tex  threat_model.tex
scripts/: capture_baseline.sh  check_parity.sh  real_world_demo.sh  reproduce_all.sh  setup_vm.sh
