[project]
name = "chronosynd-py"
version = "0.1.0"
description = "Research reference implementation of ChronosynD, home of the Sediment prototype, naive-baseline reproductions, and the evaluation harness"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "ChronosynD contributors" },
]
keywords = [
  "intrusion-detection",
  "behavioral-analysis",
  "anomaly-detection",
  "robust-statistics",
  "security",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "numpy>=2.0,<3.0",
  "scipy>=1.13,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<8.0",
  "hypothesis>=6.100,<7.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
  "scipy-stubs>=1.13,<2.0",
]
viz = [
  "matplotlib>=3.9,<4.0",
]
notebook = [
  "jupyterlab>=4.2,<5.0",
  "matplotlib>=3.9,<4.0",
  "pandas>=2.2,<3.0",
  "seaborn>=0.13,<1.0",
]

[project.urls]
Repository = "https://github.com/ChronosynD/core"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chronosynd_py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "W",    # pycodestyle warnings
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific
  "S",    # flake8-bandit, security
  "TRY",  # tryceratops, exception handling
  "PL",   # pylint
  "PT",   # pytest style
  "ARG",  # unused args
  "PTH",  # pathlib over os.path
  "TID",  # tidy imports
  "RET",  # return style
  "ANN",  # type annotations
  "FBT",  # boolean trap
]
ignore = [
  "PLR0913",  # too many arguments, research code needs many knobs
  "TRY003",   # long messages outside exception class, readability wins here
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",     # assert is the standard test primitive
  "PLR2004",  # magic numbers are fine in tests
  "ANN201",   # test function return types are obvious
  "D",        # docstrings optional in tests
]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["chronosynd_py", "tests"]
warn_unreachable = true
warn_unused_ignores = true
disallow_any_unimported = true
disallow_any_generics = true
disallow_subclassing_any = true
no_implicit_reexport = true
extra_checks = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
xfail_strict = true
filterwarnings = ["error"]
