[workspace]
resolver = "2"
members = [
    "crates/bpf",
    "crates/collector",
    "crates/features",
    "crates/baseline",
    "crates/scoring",
    "crates/storage",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ChronosynD/core"
authors = ["ChronosynD contributors"]
rust-version = "1.75"

[workspace.dependencies]
ndarray = "0.17"
statrs = "0.18"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
csv = "1.3"
aya = "0.13"
# Future pins as crates land: tokio, tracing, pyo3

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1

[profile.dev]
opt-level = 0
