[package]
name = "chronosynd-baseline"
description = "Baseline estimators, home of the production port of Sediment, the poisoning-resistant estimator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
chronosynd-features = { path = "../features" }
ndarray = { workspace = true }
statrs = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
