[package]
name = "chronosynd-collector"
description = "BPF userspace consumer, loads kernel programs, drains the ring buffer, and normalizes events"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "chronosynd-collector"
path = "src/main.rs"

[dependencies]
chronosynd-bpf = { path = "../bpf" }
chronosynd-features = { path = "../features" }
chronosynd-scoring = { path = "../scoring" }
chronosynd-storage = { path = "../storage" }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aya = { workspace = true, optional = true }
aya-obj = { version = "0.2", optional = true }

[features]
default = []
# Pulls in Aya and enables the BPF-backed event source, Linux only at runtime
bpf = ["dep:aya", "dep:aya-obj"]
