[package]
name = "chronosynd-storage"
description = "Baseline store, SQLite-backed with a hash-chained append-only log for tamper evidence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[features]
# Exposes `BaselineStore::raw_connection` so other crates' integration tests
# can inject tamper directly into the SQLite store. Off by default so
# downstream consumers of the library cannot bypass the audit chain
test-utils = []

[dependencies]
rusqlite = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
